--- a/osa3/package.json
+++ b/osa3/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^3.1.0"
   },
   "scripts": {
+    "dev": "nodemon index.js",
     "start": "node index.js",
     "build:ui": "rm -rf dist && cd ../puhelinluettelo && npm run build && cp -r dist ../osa3",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
