--- a/osa3/package.json
+++ b/osa3/package.json
@@ -14,7 +14,6 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
-    "build:ui": "rm -rf dist && cd ../puhelinluettelo && npm run build && cp -r dist ../osa3",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
+    "build:ui": "@powershell Remove-Item -Recurse -Force dist && cd ../osa1/puhelinluettelo && npm run build && @powershell Copy-Item dist -Recurse ../../osa3"
   }
 }
