--- a/osa4/package.json
+++ b/osa4/package.json
@@ -8,6 +8,7 @@
     "nodemon": "^3.1.0"
   },
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "node --test"
   }
 }
