--- a/osa4/package.json
+++ b/osa4/package.json
@@ -8,7 +8,11 @@
     "nodemon": "^3.1.0"
   },
   "scripts": {
-    "dev": "nodemon index.js",
-    "test": "node --test"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "test": "cross-env  NODE_ENV=test node --test"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
