--- a/osa4/package.json
+++ b/osa4/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
+    "eslint-plugin-react": "^7.34.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jest": "^29.7.0",
@@ -26,6 +27,8 @@
     "@stylistic/eslint-plugin-js": "^1.6.1",
     "cross-env": "^7.0.3",
     "eslint": "^8.56.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "nodemon": "^3.0.3",
     "supertest": "^6.3.4"
   }
