--- a/osa4/client/package.json
+++ b/osa4/client/package.json
@@ -15,8 +15,7 @@
     "jsdom": "^24.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vitest": "^1.4.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
@@ -30,6 +29,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-vitest-globals": "^1.5.0",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^1.4.0"
   }
 }
